--- a/models/adventureworks/sources.yml
+++ b/models/adventureworks/sources.yml
@@ -33,3 +33,105 @@ sources:
             tests:
                 - unique
                 - not_null
+      - name: person_address
+        columns:
+          - name: addressid
+            tests:
+                - unique
+                - not_null
+      - name: production_productcategory
+        columns:
+          - name: productcategoryid
+            tests:
+                - unique
+                - not_null
+      - name: production_product
+        columns:
+          - name: productid
+            tests:
+                - unique
+                - not_null
+      - name: production_productmodel
+        columns:
+          - name: productmodelid
+            tests:
+                - unique
+                - not_null
+      - name: production_productsubcategory
+        columns:
+          - name: productsubcategoryid
+            tests:
+                - unique
+                - not_null
+      - name: purchasing_shipmethod
+        columns:
+          - name: shipmethodid
+            tests:
+                - unique
+                - not_null
+      - name: sales_creditcard
+        columns:
+          - name: creditcardid
+            tests:
+                - unique
+                - not_null
+      - name: sales_customer
+        columns:
+          - name: customerid
+            tests:
+                - unique
+                - not_null            
+      - name: sales_orderdetail
+        columns:
+          - name: salesorderid
+            tests:
+                - unique
+                - not_null
+      - name: sales_orders
+        columns:
+          - name: salesorderid
+            tests:
+                - unique
+                - not_null 
+      - name: sales_orderheadersalesreason
+        columns:
+          - name: salesorderid
+            tests:
+                - unique
+                - not_null
+      - name: sales_salesreason
+        columns:
+          - name: salesreasonid
+            tests:
+                - unique
+                - not_null 
+      - name: sales_store
+        columns:
+          - name: businessentityid
+            tests:
+                - unique
+                - not_null  
+      - name: person_countryregion
+        columns:
+          - name: countryregioncode
+            tests:
+                - unique
+                - not_null               
+      - name: person_person
+        columns:
+          - name: businessentityid
+            tests:
+                - unique
+                - not_null   
+      - name: person_stateprovince
+        columns:
+          - name: stateprovinceid
+            tests:
+                - unique
+                - not_null               
+      - name: purchasing_vendor
+        columns:
+          - name: businessentityid
+            tests:
+                - unique
+                - not_null                                                                                                               
